Fixed layout shift from /portfolio image hover effects. Closes #75

--- a/src/styles/PhotoCard.css
+++ b/src/styles/PhotoCard.css
@@ -5,10 +5,25 @@
 }
 .photo-container {
   padding: 0.75rem;
-
   transition: padding 0.5s ease-out, margin 0.5s ease-out;
 }
 
-.photo-container:hover {
+.photo-container:hover, .photo-container--1-1:hover {
   padding: 0.25rem;
+}
+
+.photo-container--9-16:hover {
+  padding: 0 calc(0.75rem - (0.75rem * (9/16)));
+}
+
+.photo-container--3-2:hover {
+  padding: 0.25rem calc(0.75rem - (0.5rem * (1.5)));
+}
+
+.photo-container--4-3:hover {
+  padding: 0.25rem calc(0.75rem - (0.5rem * (4/3)));
+}
+
+.photo-container--4-5:hover {
+  padding: 0.25rem calc(0.75rem - (0.5rem * (0.8)));
 }
